<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adore_scheduler</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matthias.nichting@dlr.de">Matthias Nichting</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>adore_ros2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>adore_basenode</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


<!--/********************************************************************************
 * Copyright (C) 2017-2023 German Aerospace Center (DLR).
 * Eclipse ADORe, Automated Driving Open Research https://eclipse.org/adore
 *
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License 2.0 which is available at
 * http://www.eclipse.org/legal/epl-2.0.
 *
 * SPDX-License-Identifier: EPL-2.0
 *
 * Contributors:
 *   Matthias Nichting
 ********************************************************************************/
-->