<?xml version="1.0"?>
<!--
#********************************************************************************
#* Copyright (C) 2017-2023 German Aerospace Center (DLR). 
#* Eclipse ADORe, Automated Driving Open Research https://eclipse.org/adore
#*
#* This program and the accompanying materials are made available under the 
#* terms of the Eclipse Public License 2.0 which is available at
#* http://www.eclipse.org/legal/epl-2.0.
#*
#* SPDX-License-Identifier: EPL-2.0 
#*
#* Contributors: 
#*   Matthias Nichting - initial API and implementation
#********************************************************************************
-->

<package format="2">
  <name>lib_adore_scheduling</name>
  <version>0.0.1</version>
  <description>Scheduling for ADORe.</description>
  <maintainer email="Matthias.Nichting@DLR.de">Matthias Nichting</maintainer>
  <license>EPL-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
